Dependency cycle when driver points to property with 'scale' in name #79121

Closed
opened 2020-07-20 17:54:26 +02:00 by Damien Picard · 10 comments
Member

System Information
Operating system: Linux-5.4.0-40-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-20 10:16, hash: 8cbbdedaf4
Broken: version: 2.83.0
Worked: version: 2.79

Short description of error
When an object’s scale is driven by a variable pointing to a custom property, a dependency cycle appears if that property’s name includes "scale".
The same thing happens when the name contains "location" or "rotation".

Exact steps for others to reproduce the error
bugreport_drivers_transform_in_name.blend

  • Open attached blend
    • There is a dependency cycle on the plane’s X scale, due to the driver variable pointing to property "test_scale"
  • Change the variable’s property to the other Object prop, "test_scal"
  • Update driver dependencies
    • The deps cycle disappears…
**System Information** Operating system: Linux-5.4.0-40-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-20 10:16, hash: `8cbbdedaf4` Broken: version: 2.83.0 Worked: version: 2.79 **Short description of error** When an object’s scale is driven by a variable pointing to a custom property, a dependency cycle appears if that property’s name includes "scale". The same thing happens when the name contains "location" or "rotation". **Exact steps for others to reproduce the error** [bugreport_drivers_transform_in_name.blend](https://archive.blender.org/developer/F8709238/bugreport_drivers_transform_in_name.blend) * Open attached blend * There is a dependency cycle on the plane’s X scale, due to the driver variable pointing to property "test_scale" * Change the variable’s property to the other Object prop, "test_scal" * Update driver dependencies * The deps cycle disappears…
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour

Added subscribers: @dr.sybren, @mano-wii

Added subscribers: @dr.sybren, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This is really strange.
Apparently, just because the "test_scale" property has the name "scale" in it, it generates a dependency cycle.

@dr.sybren, could this indicate a bigger problem elsewhere?

This is really strange. Apparently, just because the `"test_scale"` property has the name `"scale"` in it, it generates a dependency cycle. @dr.sybren, could this indicate a bigger problem elsewhere?
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

It appears that this is actually purposefully coded into the depsgraph:

if (strstr(prop_identifier, "location") || strstr(prop_identifier, "rotation") ||
    strstr(prop_identifier, "scale") || strstr(prop_identifier, "matrix_")) {
  node_identifier.type = NodeType::TRANSFORM;
  return node_identifier;
}

Shouldn't this use specific property names (equals rather than contains)!

It appears that this is actually purposefully coded into the depsgraph: ```lang=c ``` if (strstr(prop_identifier, "location") || strstr(prop_identifier, "rotation") || strstr(prop_identifier, "scale") || strstr(prop_identifier, "matrix_")) { node_identifier.type = NodeType::TRANSFORM; return node_identifier; } ``` ``` Shouldn't this use specific property names (equals rather than contains)!
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
Sybren A. Stüvel self-assigned this 2020-07-23 17:11:22 +02:00

This issue was referenced by 9b867f2e90

This issue was referenced by 9b867f2e90bd5ba9c2e37ed39cf8b1ad28e39b07

@HooglyBoogly the reason it uses contains is that the "location" etc. names can be inside RNA paths, so pose["bone"].location.x is also a transform property.

@HooglyBoogly the reason it uses *contains* is that the "location" etc. names can be inside RNA paths, so `pose["bone"].location.x` is also a transform property.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79121
No description provided.